src/test/ui/issues/issue-26459.stderr
error[E0574]: expected struct, variant or union type, found builtin type `char`
  --> $DIR/issue-26459.rs:3:9
   |
LL |         char{ch} => true
   |         ^^^^ not a struct, variant or union type

error: aborting due to previous error

